--- a/prestamos-bancarios/src/components/clientes/Cliente.css
+++ b/prestamos-bancarios/src/components/clientes/Cliente.css
@@ -14,17 +14,30 @@
   padding: 0.5rem;
   font-size: 1rem;
 }
+.btn-default{
+  background-color: #007bff;
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 5px;
+}
 
-.btn-elimar-cliente{
+.btn-default:hover{
+  background-color: #0056b3;
+}
+  
+.btn-eliminar-cliente{
   background-color: #dc3545;
   color: white;
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  margin-top: 5px;
+  margin: 5px;
 }
 
-.btn-elimar-cliente:hover{
+.btn-eliminar-cliente:hover{
   background-color: #c82333;
 }
